--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.13.0",
   "appid": "wx084086ec7a7910a1",
-  "projectname": "dingyi",
+  "projectname": "dingyiProjects",
   "debugOptions": {
     "hidedInDevtools": []
   },
